syntax = "proto3";

package de.unistuttgart.isw.sfsc.protocol.registry;

import "clientserver/registry/create.proto";
import "clientserver/registry/read.proto";
import "clientserver/registry/delete.proto";

option java_multiple_files = true;

message RegistryMessage {
  int32 message_id = 1;
  oneof payload {
    CreateRequest create_request = 2;
    CreateResponse create_response = 3;
    ReadRequest read_request = 4;
    ReadResponse read_response = 5;
    DeleteRequest delete_request = 8;
    DeleteResponse delete_response = 9;
  }

}
