syntax = "proto3";

package de.unistuttgart.isw.sfsc.protocol.registry;

option java_multiple_files = true;

message ServiceDescriptor {
  map<string, bytes> tags = 1;
}
